<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@drawable/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        style="@style/AppTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile"/>

        <TextView
            android:id="@+id/demo_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_user"
            android:gravity="center"/>

        <TextView
            android:id="@+id/demo_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_user_email"
            android:gravity="center"/>

        <TextView
            android:id="@+id/demo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_content"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>